Fix dimmer alignment again

--- a/tgui/packages/tgui/styles/components/Dimmer.scss
+++ b/tgui/packages/tgui/styles/components/Dimmer.scss
@@ -20,5 +20,8 @@
   z-index: 1;
   .Dimmer__inner {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
